# calebbarzee.github.io

./: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE_MIT  README.md  Trunk.toml  build.rs  homePageScripts.js  homePageStylesheet.css  index.html  next.config.js  package-lock.json  package.json  practice.HTML  practice.js  tailwind.config.js  theme.config.js  vite.config.js  webpack.config.js
.github/workflows/: gh-pages-deploy.yml  main.yml  nextjs.yml
.next/: build-manifest.json  trace
.next/cache/: next-server.js.nft.json
.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
app/: globals.css  layout.js  not-found.js  page.js
app/blog/: page.js
app/components/: AnimatePi.js  ArticlePreview.js  CalcPi.js  PiTrain.js  article_preview.js  navbar.js  temp_pi.js
app/kids_can_code/: page.js
app/math/: page.js
app/utils/: fetch_text.js  get_article.js
archive/: package-lock.json
archives/: gen_ai_blog1.md  pi_calc_blog1.md
articles/: gen_ai_blog1.md  pi_calc_blog1.md  rethinking_the_resume.md
css/: homePageStylesheet.css
html/: index.html  practice.HTML
js/: homePageScripts.js  practice.js
lesson01/: class.html  functions.js  index.html
lesson01/css/: medium.css  small.css
lesson02/: design-principles.html
lesson02/css/: large.css  medium.css  small.css
lesson02/js/: lesson02.js
lesson03/: color-scheme.html  index.html  target-audience.html  typography.html
lesson03/css/: medium.css  small.css
lesson03/js/: homePageScripts.js
lesson04/: index.html  preston-4.html
lesson04/css/: medium.css  small.css  stylesheet.css
lesson04/js/: current_date.js  responsive_menu.js
lesson05/: preston-5.html
lesson05/css/: stylesheet.css
lesson05/js/: current_date.js  responsive_menu.js
lesson06/: preston-6.html
lesson06/css/: medium.css  small.css
lesson06/js/: weather_summary.js
lesson07/: index.html
lesson07/js/: gallery_load.js
lesson07/lazy_load_activity/: index.html  load.js  stylesheet.css
lesson08/: index.html  thank_you_page.html
lesson08/css/: stylesheet.css
lesson08/js/: form_value_adjust.js  responsive_menu.js
lesson09/: index.html
lesson09/css/: large.css  small.css
lesson09/js/: home_page_towns.js  town_data.json
lesson09/prophets_activity/: prophets.css  prophets.html  prophets.js
lesson10/: index.html  preston-10.html
lesson10/css/: homepage_large.css  preston_medium.css  preston_small.css
lesson10/js/: responsive_menu.js  (+2 more)
lesson11/: fish_haven.html  gallery.html  index.html  preston-11.html  soda_springs.html  storm_form.html
mtg_card_viewer/: index.html
notes/: api_keys  hotkeys  sept_21.txt
pages/: index.mdx
src/: App.js  App.jsx  app.rs  blog.rs  lib.rs  main.rs  shader_math.rs  stl.rs
style/: main.scss
(+367 files in other folders)
