[package]
name = "ascii_render"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
glam = "0.31"
bytemuck = { version = "1", features = ["derive"] }
pulldown-cmark = "0.12"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Blob",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "MouseEvent",
    "Url",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlRenderbuffer",
    "WebGlVertexArrayObject",
    "Storage",
    "WheelEvent",
    "Window",
    "Performance",
]

[build-dependencies]
toml = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
